# rust-incubator

./: .gitignore  README.md
0_basics/: README.md  answer.md
1_concepts/: Cargo.toml  README.md
1_concepts/1_1_default_clone_copy/: README.md
1_concepts/1_1_default_clone_copy/src/: main.rs
1_concepts/1_2_box_pin/: README.md
1_concepts/1_2_box_pin/src/: main.rs
1_concepts/1_3_rc_cell/: README.md
1_concepts/1_3_rc_cell/src/: main.rs
1_concepts/1_4_cow/: README.md
1_concepts/1_4_cow/src/: main.rs
1_concepts/1_5_convert_cast_deref/: Cargo.toml  README.md
1_concepts/1_5_convert_cast_deref/src/: email_string.rs  lib.rs  main.rs  random.rs
1_concepts/1_6_dispatch/: README.md
1_concepts/1_6_dispatch/src/: dynamic_dispatch.rs  lib.rs  main.rs  static_dispatch.rs
1_concepts/1_7_sized/: README.md
1_concepts/1_7_sized/src/: command.rs  lib.rs  repo.rs  storage.rs
1_concepts/1_8_thread_safety/: README.md
1_concepts/1_8_thread_safety/src/: lib.rs
1_concepts/1_9_phantom/: README.md
1_concepts/1_9_phantom/src/: main.rs
1_concepts/src/: lib.rs
2_idioms/: Cargo.toml  README.md
2_idioms/2_1_type_safety/: Cargo.toml  README.md
2_idioms/2_1_type_safety/src/: lib.rs  main.rs
2_idioms/2_2_mem_replace/: README.md
2_idioms/2_2_mem_replace/src/: main.rs
2_idioms/2_3_bound_impl/: README.md
2_idioms/2_4_generic_in_type_out/: README.md
2_idioms/src/: main.rs
3_ecosystem/: .env  Cargo.toml  README.md
3_ecosystem/3_10_threads/: Cargo.toml  README.md
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml  README.md  file.txt
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_12_web_db/: .env  Cargo.toml  README.md
3_ecosystem/3_12_web_db/migrations/: 20220714084007_up.sql  20220714085958_down.sql
3_ecosystem/3_12_web_db/src/: main.rs
3_ecosystem/3_1_testing/: Cargo.toml  README.md
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_1_testing/tests/: test.rs
3_ecosystem/3_2_macro/: Cargo.toml  README.md
3_ecosystem/3_2_macro/src/: declarative.rs  lib.rs  main.rs
3_ecosystem/3_3_date_time/: Cargo.toml  README.md
3_ecosystem/3_3_date_time/src/: lib.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml  README.md
3_ecosystem/3_4_regex_parsing/src/: lib.rs  pest_impl.rs  regex_impl.rs
3_ecosystem/3_5_collections/: README.md
3_ecosystem/3_5_collections/src/: lib.rs
3_ecosystem/3_6_serde/: Cargo.toml  README.md  request.json
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml  README.md
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml  README.md
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml  README.md  config.1.toml  default.toml  myconfig.toml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs  settings.rs
3_ecosystem/migrations/: 20220718084601_up.sql  20220718092750_down.sql  20220718103149_up.sql
3_ecosystem/src/: db.rs  graphql.rs  main.rs  user.rs  utils.rs
(+2 files in other folders)
