[package]
name = "step_3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.1.0"
argonautica = "0.2.0"
color-eyre = "0.6.2"
dotenv = "0.15.0"
juniper = { version = "0.15.9", features = ["uuid"] }
juniper_actix = "0.4.0"
serde = "1.0.139"
sqlx = { version = "0.6.0", features = [
  "runtime-actix-native-tls",
  "postgres",
  "uuid",
  "time",
] }
time = "0.3.11"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] } # last version juniper supports

[profile.dev.package.sqlx-macros]
opt-level = 3
