[package]
name = "step_3_4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }
regex = { version = "1.6.0", optional = true }

[features]
default = []
regex = ["dep:regex", "dep:lazy_static"]
pest = ["dep:pest", "dep:pest_derive"]
