[package]
name = "step_3_6"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde_yaml = "0.8.24"
humantime-serde = "1.1.1"
pretty_assertions = "1.2.1"

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "1.1.2"
features = ["serde"]

[dependencies.serde_json]
version = "1.0.76"
features = ["preserve_order"]

[dependencies.toml]
version = "0.5.9"
features = ["preserve_order"]
